<resources>
    <string name="NoChoose">0/3</string>
    <string name="ChooseOne">1/3</string>
    <string name="ChooseTow">2/3</string>
    <string name="ChooseThree">3/3</string>
    <string name="exitHint">再按一次退出程序</string>
    <string name="ChooseEnough">最多只可选择三个标签</string>
    <string name="ChooseHint">请先在上一页选择标签</string>
    <string name="basic_action_1">删除</string>
    <string name="basic_action_2">Action_2</string>
    <string name="basic_del">Delete</string>
    <string name="str_orange">#fe7b27</string>
    <string name="str_green">#3cac69</string>
    <string name="str_red">#FF4444</string>
    <string name="str_yellow">#FFBB33</string>
    <string name="str_sky_blue">#33B5E5</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="login">登录</string>
    <string name="text_btn_init">百度账号绑定</string>
    <string name="text_btn_init1">更换百度账号</string>
    <string name="text_btn_on_push">打开Push</string>
    <string name="text_btn_off_push">关闭Push</string>
    <string name="log_tip">日志：</string>
    <string name="clear_log">清除日志</string>
    <string name="text_btn_rich">富媒体消息</string>
    <string name="text_btn_initAK">无账号绑定</string>
    <string name="text_btn_setTags">设置标签</string>
    <string name="text_btn_delTags">删除标签</string>
    <string name="text_btn_senior">高级功能</string>
    <string name="text_btn_set">设置</string>
    <string name="text_media_title">富媒体消息列表</string>
    <string name="media">Rich Media</string>
    <string name="custom_text_hint">用户自定义行为打开的Activity</string>
    <string name="tags_hint">请输入多个标签，以英文逗号隔开</string>
    <string name="text_btn_aidl">轻应用AIDL</string>
    <string name="text_btn_off_lightapp">关闭所有轻消息</string>
    <string name="text_btn_off_app_msg">加入黑名单</string>
    <string name="text_btn_unread_only_msg">只获取未读消息</string>
    <string name="text_btn_on_shortcut">生成快捷图标</string>
    <string name="text_btn_showTags">列举标签</string>
    <string name="text_btn_unbind">解绑</string>
    <string name="text_btn_setunDisturb">免打扰时段</string>
    <string name="text_toast">设置成功，免打扰时段为：\n%1$s - %2$s</string>
    <string name="text_about">百度Push Android SDK 4.5.1\n\n更新时间:2015年6月18日\nChange Log：\n去除Frontia等相关内容，集成更加简便。\n增强端上加密和解密能力，升级so文件。\n增加重启保护机制，防止频繁调用接口造成的电量流失。\n增加SDK集成错误的提示和回调。\n解决数个引发崩溃的不常见bug。</string>
    <string name="text_help">百度hi官方技术讨论群：1405944\nQQ群：324533810（可加）\n云推送微信公众账号：云推送（微信号：baidu-push）\n</string>
    <string name="app">图忆</string>
    <string name="animate">Animate</string>
    <string name="basic_map">基本地图</string>
    <string name="clear_map">Clear</string>
    <string name="compass">指南针</string>
    <string name="down_arrow">\u2193</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/satellite</item>
        <item>@string/night_mode</item>
    </string-array>
    <string name="layers_demo">Layers图层功能</string>
    <string name="layers_description">介绍地图分别以正常、卫星模式展示出</string>
    <string name="left_arrow">\u2190</string>
    <string name="locationSensorGPS_demo">gps追随功能</string>
    <string name="locationSensorGPS_demo_description">介绍如何用gps定位图标箭头随手机转动而转动</string>
    <string name="locationsource_demo">Location小蓝点功能</string>
    <string name="locationsource_description">介绍对系统定位显示小蓝点功能</string>
    <string name="locationmodesource_demo">Location三种模式</string>
    <string name="locationmodesource_description">介绍定位、追随、选择不同模式使用</string>
    <string name="locationGPS_demo">gps定位功能</string>
    <string name="locationGPS_description">介绍如何使用gps定位</string>
    <string name="locationNetwork_description">介绍如何使用网络定位</string>
    <string name="locationNetwork_demo">网络定位功能</string>
    <string name="marker_demo">Markers功能</string>
    <string name="marker_description">介绍在地图上添加marker和infoWindow</string>
    <string name="mapOption_demo">AMapOptions实现地图</string>
    <string name="mapOption_description">介绍用AMapOptions展示一个地图</string>
    <string name="map_not_ready">SupportMapFragment初始化失败</string>
    <string name="move_the_camera">移动camera</string>
    <string name="touch_the_map">地图触摸事件</string>
    <string name="my_location">My Location</string>
    <string name="mylocation_layer">我的位置图层</string>
    <string name="no_demos">No demos</string>
    <string name="normal">Normal</string>
    <string name="night_mode">Night</string>
    <string name="polygon_demo">Polygons功能</string>
    <string name="polygon_description">介绍在地图绘制多边形</string>
    <string name="polyline_demo">Polylines功能</string>
    <string name="polyline_description">介绍在地图中绘制线条</string>
    <string name="groundoverlay_demo">GroundOverlay功能</string>
    <string name="groundoverlay_description">介绍在地图中绘制GroundOverlay功能</string>
    <string name="circle_demo">Circles功能</string>
    <string name="circle_description">介绍在地图中绘制圆形</string>
    <string name="navigatearrow_demo">NavigateArrow功能</string>
    <string name="navigatearrow_description">介绍如何在地图中绘制导航指示箭头功能</string>
    <string name="arc_demo">Arc功能</string>
    <string name="arc_description">介绍在地图中绘制弧形</string>
    <string name="screenshot_demo">地图截屏功能</string>
    <string name="screenshot_description">介绍对地图进行截屏</string>
    <string name="properties_polyline">设置Polyline属性</string>
    <string name="properties_polygon">设置Polygon属性</string>
    <string name="properties_circle">设置Circle属性</string>
    <string name="busline_demo">Busline公交查询</string>
    <string name="busline_description">介绍如何在地图中绘制BusLine</string>
    <string name="route_demo">Route路径规划</string>
    <string name="route_description">介绍如何在地图中绘制Route</string>
    <string name="rotate">旋转手势</string>
    <string name="reset_map">Reset</string>
    <string name="right_arrow">\u2192</string>
    <string name="satellite">Satellite</string>
    <string name="scroll">滑动手势</string>
    <string name="stop_animation">\u25A0</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="tap_instructions">点击或者长按地图</string>
    <string name="terrain">Terrain</string>
    <string name="tilt">倾斜手势</string>
    <string name="traffic">Traffic</string>
    <string name="transparency">Transparency</string>
    <string name="opengl_demo">Opengl接口功能</string>
    <string name="opengl_description">介绍地图中开放Opengl接口功能</string>
    <string name="uisettings_demo">UI Settings功能</string>
    <string name="uisettings_description">介绍地图中UI Settings功能</string>
    <string name="geocoder_demo">地理编码 功能</string>
    <string name="geocoder_description">介绍 geocoder地理编码 功能</string>
    <string name="poikeywordsearch_demo">poi关键字搜索</string>
    <string name="poikeywordsearch_description">介绍poi关键字搜索功能</string>
    <string name="poiaroundsearch_demo">poi周边搜索</string>
    <string name="poiaroundsearch_description">介绍poi周边搜索功能</string>
    <string name="offlinemap_demo">离线地图功能</string>
    <string name="offlinemap_description">介绍如何使用离线地图</string>
    <string name="district_demo">行政区划查询</string>
    <string name="district_description">政区划查询功能演示</string>
    <string name="search_title">搜索关键字</string>
    <string name="up_arrow">\u2191</string>
    <string name="width">Width</string>
    <string name="zoom_position">zoom显示及位置</string>
    <string name="zoom_buttons">显示</string>
    <string name="zoom_gestures">缩放手势</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="scale">比例尺</string>
    <string name="buttonScale">获取比例尺</string>
    <string name="beijing">"北京"</string>
    <string name="start">"开始"</string>
    <string name="pause">"暂停"</string>
    <string name="stop">"停止"</string>
    <string name="remove">"删除"</string>
    <string name="update">"更新"</string>
    <string name="logo_position">logo位置</string>
    <string name="bottom_left">左下</string>
    <string name="bottom_center">底部居中</string>
    <string name="bottom_right">右下</string>
    <string name="center_right">右中</string>
    <string name="map_screenshot">地图截屏</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="district">区/县</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">已发送</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图像</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音通话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">明信片</string>
    <string name="move_up_to_cancel">抬起手指取消发送</string>
    <string name="release_to_cancel">松开手指取消发送</string>
    <string name="send_fail">发送失败</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除对话与消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重新发送</string>
    <string name="confirm_resend">确认重新发送？</string>
    <string name="connect_failuer_toast">请确认网络连接或者重新连接</string>
    <string name="network_unavailable">网络不可用, 请确认网络是否可用</string>
    <string name="copy">复制</string>
    <string name="forward">前往</string>
    <string name="button_logout">登出</string>
    <string name="button_uploadlog">上载Log日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">注意</string>
    <string name="clear_records">清空当前会话?</string>
    <string name="clear_all_records">清空所有会话？</string>
    <string name="location_recv">[%1$s 位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">语音提醒</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜索</string>
    <string name="network_isnot_available">当前网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确认前往：%1$s ?</string>
    <string name="logout">登出</string>
    <string name="logout_hint">登出不会清除聊天历史纪录, 当前用户可以在下次登陆继续使用</string>
    <string name="exit_group_hint">退出圈子后将收不到圈子的消息</string>
    <string name="dissolution_group_hint">退出后圈子将会消失</string>
    <string name="exit_group">退出</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="confirmpassword">确认密码</string>
    <string name="rader_position_alert">添加位置上传时的备注信息，对其他用户可见</string>
    <string name="default_text_null">默认为空</string>
    <string name="text_default">默认</string>
    <string name="tell_me_your_thinking">聊聊你的看法吧</string>
    <string name="write_you_want">写下你的心声</string>
    <string name="preview">预览</string>
    <string name="description">说明</string>
</resources>