<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/add_friend_dialog_bg"
    android:gravity="center"
    android:minHeight="300.0dip"
    android:minWidth="300.0dip"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        android:gravity="center"
        android:text="@string/rader_position_alert"
        android:textSize="@dimen/text_size_16" />

    <EditText
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/circle_rect_alph_white"
        android:id="@+id/radar_info_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="20.0dip"
        android:gravity="start"
        android:hint="@string/default_text_null"
        android:minHeight="80.0dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20.0dip"
        android:layout_marginTop="10.0dip"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:textColor="@color/md_white_1000"
            android:id="@+id/radar_info_done"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginRight="10.0dip"
            android:background="@drawable/circle_rect_red"
            android:gravity="center"
            android:paddingBottom="5.0dip"
            android:paddingLeft="20.0dip"
            android:paddingRight="20.0dip"
            android:paddingTop="5.0dip"
            android:text="@string/start"
            android:textSize="@dimen/text_size_17" />

        <TextView
            android:id="@+id/radar_info_cancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="10.0dip"
            android:background="@drawable/circle_rect_blue"
            android:gravity="center"
            android:paddingBottom="5.0dip"
            android:paddingLeft="20.0dip"
            android:paddingRight="20.0dip"
            android:paddingTop="5.0dip"
            android:text="@string/text_default"
            android:textSize="@dimen/text_size_17" />
    </LinearLayout>
</LinearLayout>