<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/load_pic"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1.5"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/circle_soild_whiel" >

            <ImageView
                android:id="@+id/iv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:src="@drawable/icon_account" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/iv_username"
                android:background="@null"
                android:hint="@string/user_name"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_soild_whiel" >

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:src="@drawable/icon_pwd" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/iv_password"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_soild_whiel" >

            <ImageView
                android:id="@+id/iv_password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:src="@drawable/icon_pwd" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/iv_password2"
                android:background="@null"
                android:hint="@string/confirmpassword"
                android:inputType="textPassword"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textSize="18sp" />
        </RelativeLayout>
<LinearLayout
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:layout_gravity="center"
    android:background="@drawable/circle_soild_whiel"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="46dp">
    <TextView
        android:textSize="@dimen/text_size_16"
        android:text="性别:"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/sex"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/sex_check"
        android:button="@null"
        android:layout_width="30dp"
        android:layout_height="30dp" />
</LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_like_addr"
                android:onClick="register"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/register"
                android:textColor="@color/md_grey_800"
                android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>